--- a/CITATION.bib
+++ b/CITATION.bib
@@ -2,7 +2,7 @@
 	author  = {Guillaume Dalle <22795598+gdalle@users.noreply.github.com> and contributors},
 	title   = {DifferentiableFrankWolfe.jl},
 	url     = {https://github.com/gdalle/DifferentiableFrankWolfe.jl},
-	version = {v1.0.0-DEV},
+	version = {v0.1.0},
 	year    = {2023},
 	month   = {4}
 }
